src/main/kotlin/com/example/hhplusweek3/error/NotEnoughBalanceException.kt
package com.example.hhplusweek3.error

class NotEnoughBalanceException(message: String) : RuntimeException(message)
